Montly edit to ingestion files

--- a/catalogue/era5/reanalysis-era5-single-levels-ocean/ingestion/single-ingestion-step-ocean.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels-ocean/ingestion/single-ingestion-step-ocean.yaml
@@ -8,7 +8,7 @@ steps:
     filename_or_obj:
       #area: ['90', '0', '-90', '360']
       dataset: reanalysis-era5-single-levels
-      date: [1940-01-01/2025-01-31]
+      date: [1940-01-01/2025-04-30]
       time: [ '00:00', '01:00', '02:00', '03:00', '04:00', '05:00', '06:00', '07:00', '08:00', '09:00', '10:00', '11:00', '12:00', '13:00', '14:00', '15:00', '16:00', '17:00', '18:00', '19:00', '20:00', '21:00', '22:00', '23:00' ]
       product_type: reanalysis
       variable: [
@@ -21,7 +21,6 @@ steps:
         "peak_wave_period",
         "air_density_over_the_oceans",
         "coefficient_of_drag_with_waves",
-
         "free_convective_velocity_over_the_oceans",
         "maximum_individual_wave_height",
         "mean_direction_of_total_swell",
@@ -33,14 +32,15 @@ steps:
         "mean_wave_direction_of_second_swell_partition",
         "mean_wave_direction_of_third_swell_partition",
         "mean_wave_period_based_on_first_moment",
-        #"mean_wave_period_based_on_first_moment_for_swell",
-        #"mean_wave_period_based_on_first_moment_for_wind_waves",
-        #"mean_wave_period_based_on_second_moment_for_swell",
-        #"mean_wave_period_based_on_second_moment_for_wind_waves",
-        #"mean_wave_period_of_first_swell_partition",
-        #"mean_wave_period_of_second_swell_partition",
-        #"mean_wave_period_of_third_swell_partition",
-        #"model_bathymetry",
+        "mean_wave_period_based_on_first_moment_for_swell",
+        "mean_wave_period_based_on_first_moment_for_wind_waves",
+        "mean_wave_period_based_on_second_moment_for_swell",
+        "mean_wave_period_based_on_second_moment_for_wind_waves",
+        "mean_wave_period_of_first_swell_partition",
+        "mean_wave_period_of_second_swell_partition",
+        "mean_wave_period_of_third_swell_partition",
+        "model_bathymetry",
+
         #"normalized_energy_flux_into_ocean",
         #"normalized_energy_flux_into_waves",
         #"normalized_stress_into_ocean",
@@ -66,7 +66,6 @@ steps:
 
   robust_to_zarr_kwargs: {restart_dim: valid_time, restart_block_size: 1, retries: 3}
   to_zarr_kwargs: {
-    store: s3://edc-era5/reanalysis-era5-single-levels-ocean-v0.zarr,
-    #store: s3://edc-era5/reanalysis-era5-single-levels-ocean-v0-dev.zarr,
-    #chunk_store: s3://edc-era5/reanalysis-era5-single-levels-ocean-v0.zarr,
+    store: s3://edc-era5/reanalysis-era5-single-levels-ocean-v0-dev.zarr,
+    chunk_store: s3://edc-era5/reanalysis-era5-single-levels-ocean-v0.zarr,
   }
