--- a/catalogue/era5/reanalysis-era5-single-levels/ingestion/single-ingestion-step.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/ingestion/single-ingestion-step.yaml
@@ -136,19 +136,19 @@ steps:
         "forecast_surface_roughness",
         "friction_velocity",
 
-        #"gravity_wave_dissipation",
-        #"k_index",
-        #"land_sea_mask",
-        #"mean_vertical_gradient_of_refractivity_inside_trapping_layer",
-        #"minimum_vertical_gradient_of_refractivity_inside_trapping_layer",
-        #"northward_gravity_wave_surface_stress",
-        #"northward_turbulent_surface_stress",
-        #"sea_ice_cover",
-        #"skin_reservoir_content",
-        #"slope_of_sub_gridscale_orography",
-        #"standard_deviation_of_filtered_subgrid_orography",
-        #"standard_deviation_of_orography",
-        #"total_column_ozone",
+        "gravity_wave_dissipation",
+        "k_index",
+        "land_sea_mask",
+        "mean_vertical_gradient_of_refractivity_inside_trapping_layer",
+        "minimum_vertical_gradient_of_refractivity_inside_trapping_layer",
+        "northward_gravity_wave_surface_stress",
+        "northward_turbulent_surface_stress",
+        "sea_ice_cover",
+        "skin_reservoir_content",
+        "slope_of_sub_gridscale_orography",
+        "standard_deviation_of_filtered_subgrid_orography",
+        "standard_deviation_of_orography",
+        "total_column_ozone",
       ]
     request_chunker_kwargs: { time_dim: valid_time }
     request_chunks: { day: 20 }
