--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -22,11 +22,12 @@ assets:
 search_weight: 80
 properties:
   edh:maturity: published
-  dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric and land surface quantities
+  dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric
+    and land surface quantities
   dc:title: ERA5 hourly data on single levels
-  datetime: '2025-02-28T23:00:00Z'
+  datetime: '2025-04-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2025-02-28T23:00:00Z'
+  end_datetime: '2025-04-30T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -58,8 +59,8 @@ properties:
       axis: t
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2025-02-28T23:00:00Z'
-  dc:extent: 421.6 TB
+      - '2025-04-30T23:00:00Z'
+  dc:extent: 422.5 TB
   cube:variables:
     alnid:
       dimensions:
