--- a/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
+++ b/catalogue/d1-climate-dt-story-nudging-Tplus2.0K-IFS-FESOM/__collection__.yaml
@@ -11,7 +11,7 @@ links:
   type: text/html
 - title: Licence to use Copernicus products
   rel: license
-  href: https://cds.climate.copernicus.eu/api/v2/terms/static/licence-to-use-copernicus-products.pdf
+  href: https://cds.climate.copernicus.eu/licences/licence-to-use-copernicus-products
   type: application/pdf
 extent:
   spatial:
