--- a/catalogue/sentinel-1-ard/__collection__.yaml
+++ b/catalogue/sentinel-1-ard/__collection__.yaml
@@ -9,9 +9,9 @@ links:
   rel: derived_from
   href: https://documentation.dataspace.copernicus.eu/APIs/SentinelHub/Data/S1GRD.html
   type: text/html
-- title: Licence to use Copernicus products
+- title: Licence to use Copernicus Sentinel data
   rel: license
-  href: https://cds.climate.copernicus.eu/api/v2/terms/static/licence-to-use-copernicus-products.pdf
+  href: https://cds.climate.copernicus.eu/licences/ec-sentinel
   type: application/pdf
 extent:
   spatial:
