publish Sentinel-1 sample dataset

--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-22/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-22/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - 18.0
 - 48.0
 properties:
-  edh:maturity: draft
+  edh:maturity: published
   datetime: '2024-12-25T00:00:00Z'
   start_datetime: '2024-01-12T00:00:00Z'
   end_datetime: '2024-12-25T00:00:00Z'
