--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-117/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-117/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - 12.0
 - 48.0
 properties:
-  edh:maturity: draft
+  edh:maturity: published
   datetime: '2024-12-31T00:00:00Z'
   start_datetime: '2024-01-06T00:00:00Z'
   end_datetime: '2024-12-31T00:00:00Z'
