--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - {{ cookiecutter.utm_zone[:-1]|int * 6.0 - 180  }}
 - 48.0
 properties:
-  edh:maturity: draft
+  edh:maturity: published
   datetime: '2022-01-01T12:00:00Z'
   start_datetime: '2024-01-11T00:00:00Z'
   end_datetime: '2024-12-24T00:00:00Z'
