--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-51/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-51/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - 18.0
 - 48.0
 properties:
-  edh:maturity: published
+  edh:maturity: draft
   datetime: '2024-12-27T00:00:00Z'
   start_datetime: '2024-01-02T00:00:00Z'
   end_datetime: '2024-12-27T00:00:00Z'
