--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -22,12 +22,13 @@ assets:
         trust_env: true
 search_weight: 90
 properties:
-  datetime: '2025-08-01T00:00:00Z'
+  datetime: '2025-09-01T00:00:00Z'
   start_datetime: '1979-01-01T00:00:00Z'
-  end_datetime: '2025-08-01T00:00:00Z'
+  end_datetime: '2025-09-01T00:00:00Z'
   edh:maturity: published
-  dc:abstract: The Essential Climate Variables contains
-    a selection of climatologies, monthly anomalies and monthly mean fields. The dataset is provided in a ARCO Zarr format ideal for time series analysis
+  dc:abstract: The Essential Climate Variables contains a selection of climatologies,
+    monthly anomalies and monthly mean fields. The dataset is provided in a ARCO Zarr
+    format ideal for time series analysis
   dc:access_rights: unrestricted
   dc:title: Essential climate variables from 1979 to present
   dc:subject:
@@ -43,7 +44,7 @@ properties:
       axis: t
       extent:
       - '1979-01-01T00:00:00Z'
-      - '2025-08-01T00:00:00Z'
+      - '2025-09-01T00:00:00Z'
       step: P1M
     latitude:
       type: spatial
