--- a/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
@@ -23,11 +23,12 @@ search_weight: 70
 properties:
   edh:maturity: published
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
-    ocean-wave and land surface quantities. The dataset is provided in a ARCO Zarr format ideal for time series analysis
+    ocean-wave and land surface quantities. The dataset is provided in a ARCO Zarr
+    format ideal for time series analysis
   dc:title: ERA5 hourly data on pressure levels
-  datetime: '2025-08-31T23:00:00Z'
+  datetime: '2025-09-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2025-08-31T23:00:00Z'
+  end_datetime: '2025-09-30T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -42,7 +43,7 @@ properties:
       type: temporal
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2025-08-31T23:00:00Z'
+      - '2025-09-30T23:00:00Z'
       step: PT1H
       axis: t
     latitude:
@@ -61,7 +62,7 @@ properties:
       - 359.8
       reference_system: 4326
       step: 0.25
-  dc:extent: 948.1 TB
+  dc:extent: 949.0 TB
   cube:variables:
     cc:
       dimensions:
