--- a/catalogue/era5/reanalysis-era5-single-levels-monthly-means/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels-monthly-means/__item__.yaml
@@ -23,11 +23,12 @@ search_weight: 85
 properties:
   edh:maturity: published
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
-    ocean-wave and land surface quantities. The dataset is provided in a ARCO Zarr format ideal for time series analysis
+    ocean-wave and land surface quantities. The dataset is provided in a ARCO Zarr
+    format ideal for time series analysis
   dc:title: ERA5 monthly data on single levels
-  datetime: '2025-08-01T00:00:00Z'
+  datetime: '2025-09-01T00:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2025-08-01T00:00:00Z'
+  end_datetime: '2025-09-01T00:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -43,7 +44,7 @@ properties:
       axis: t
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2025-08-01T00:00:00Z'
+      - '2025-09-01T00:00:00Z'
       step: P1M
     latitude:
       type: spatial
