--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -23,11 +23,12 @@ search_weight: 80
 properties:
   edh:maturity: published
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric
-    and land surface quantities. The dataset is provided in a ARCO Zarr format ideal for time series analysis
+    and land surface quantities. The dataset is provided in a ARCO Zarr format ideal
+    for time series analysis
   dc:title: ERA5 hourly data on single levels
-  datetime: '2025-08-31T23:00:00Z'
+  datetime: '2025-09-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2025-08-31T23:00:00Z'
+  end_datetime: '2025-09-30T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -59,8 +60,8 @@ properties:
       axis: t
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2025-08-31T23:00:00Z'
-  dc:extent: 399.2 TB
+      - '2025-09-30T23:00:00Z'
+  dc:extent: 399.6 TB
   cube:variables:
     alnid:
       dimensions:
