--- a/catalogue/era5/reanalysis-era5-single-levels-ensemble-spread/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels-ensemble-spread/__item__.yaml
@@ -21,7 +21,7 @@ assets:
         trust_env: true
 search_weight: 80
 properties:
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Subset of ERA5 single-levels ensemble spreads. The dataset is provided in a ARCO Zarr format ideal for time series analysis
   dc:title: Ensemble spread of ERA5 hourly data on single levels
   datetime: '2025-09-30T23:00:00Z'
